embedder.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nv-embedqa-e5-v
spec:
  containers:
  - name: nv-embedqa-e5-v5
    image: "nvcr.io/nim/$NIM_MODEL_NAME:1.0.0"
    volumeMounts:
    - mountPath: /opt/nim/.cache
      name: ngc-cache
    resources:
      limits:
        nvidia.com/gpu: 1
    securityContext:
      runAsUser: '$oauthtoken'
  volumes:
  - name: ngc-cache
    hostPath:
      path: ~/.cache/nim
  imagePullSecrets:
  - name: nvcrimagepullsecret
