llm.yaml
apiVersion: v1
kind: Pod
metadata:
  name: llama3-8b
spec:
  containers:
  - name: llama3-8b
    image: "nvcr.io/nim/meta/llama3-8b-instruct:1.0.3"
    ports:
    - containerPort: 8080
  imagePullSecrets:
  - name: nvcrimagepullsecret
