embedder-nim-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: embedder-nim-service
  namespace: "default"
spec:
  type: NodePort
  selector:
    app: embedder-nim
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
