llm-loadbalance-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llm-loadbalancer
spec:
  selector:
    app: llm-nim
  type: LoadBalancer
  externalIPs:
  - 192.168.0.10
  ports:
  - name: http
    port: 80
    targetPort: 8000
