nim-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: llm-nim-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: "llm.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: llm-nim-service
            port: 
              number: 80
  - host: "embedder.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: embedder-nim-service
            port: 
              number: 80
